# Xen-MIDI-Retuner

./: .clang-format  .gitignore  .gitmodules  CHANGE_LOG.md  CMakeLists.txt  README.md  Xen MIDI Retuner.jucer
Builds/MacOSX/: Info-AAX.plist  Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST.plist  Info-VST3.plist
Builds/MacOSX/Xen MIDI Retuner.xcodeproj/: project.pbxproj
JuceLibraryCode/: AppConfig.h  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Source/: ComponentWithReferenceToData.cpp  ComponentWithReferenceToData.h  KeyboardVisual.cpp  KeyboardVisual.h  NoteAndFrequencyOverlay.cpp  NoteAndFrequencyOverlay.h  PluginEditor.cpp  PluginEditor.h  PluginGUI.cpp  PluginGUI.h  PluginProcessor.cpp  PluginProcessor.h  ProcessorData.cpp  ProcessorData.h  ProcessorStructures.h  ScaleChangeBroadcaster.h  Utilities.cpp  Utilities.h
Source/Components/: MIDIChannelStatusAndToggle.cpp  MIDIChannelStatusAndToggle.h  MIDIChannelStatusAndToggleSingle.cpp  MIDIChannelStatusAndToggleSingle.h  TransitionCurve.cpp  TransitionCurve.h  TransitionCurveGUI.cpp  TransitionCurveGUI.h
Source/EditorModules/: ConversionModule.cpp  ConversionModule.h  InputModule.cpp  InputModule.h  KeyboardVisual.cpp  KeyboardVisual.h  NoteAndFrequencyOverlay.cpp  NoteAndFrequencyOverlay.h  NotePrioritizationModule.cpp  NotePrioritizationModule.h  OutputModule.h  ProcessingView.cpp  ProcessingView.h  ScaleEditor.cpp  ScaleEditor.h  ScaleFrequenciesOverlay.cpp  ScaleFrequenciesOverlay.h  SettingsView.cpp  SettingsView.h  TestingView.cpp  TestingView.h
Source/EditorModules/Components/: TransitionCurve.cpp  TransitionCurve.h
Source/EditorModules/KeyboardVisual/: KeyboardVisual.cpp  KeyboardVisual.h  KeyboardVisualControlsOverlay.cpp  KeyboardVisualControlsOverlay.h  KeyboardVisualOptions.cpp  KeyboardVisualOptions.h  NoteAndFrequencyOverlay.cpp  NoteAndFrequencyOverlay.h  ScaleFrequenciesOverlay.cpp  ScaleFrequenciesOverlay.h
Source/EditorModules/ProcessingView/: ConversionModule.cpp  ConversionModule.h  InputModule.cpp  InputModule.h  OutputModule.cpp  OutputModule.h  ScaleEditor.cpp  ScaleEditor.h
Source/EditorModules/ProcessingView/ConversionModule/: TransitionCurveEvaluationGraphic.cpp  (+1 more)
Source/EditorModules/TestingView/: ActionButtonAndStatus.cpp  ActionButtonAndStatus.h  CapabilitiesTestGUI.cpp  CapabilitiesTestGUI.h  MIDIChannelToolbar.cpp  MIDIChannelToolbar.h  TestList.cpp  TestList.h
Source/TUN-Source_V200/: Readme.txt
Source/TUN-Source_V200/MSF_Edit/: InputText.cpp  InputText.h  MSF_Edit.cpp  MSF_Edit.dsp  MSF_Edit.dsw  MSF_Edit.h  MSF_Edit.rc  MSF_EditDlg.cpp  MSF_EditDlg.h  Resource.h  StdAfx.cpp  StdAfx.h
Source/TUN-Source_V200/TUN_Convert/: Resource.h  StdAfx.cpp  StdAfx.h  TEMPLATE.html  TUN_Convert.cpp  TUN_Convert.dsp  TUN_Convert.dsw  TUN_Convert.h  TUN_Convert.rc  TUN_ConvertDlg.cpp  TUN_ConvertDlg.h
Source/TUN-Source_V200/TUN_Edit/: CompositionDlg.cpp  CompositionDlg.h  KeywordDlg.cpp  KeywordDlg.h  Resource.h  StdAfx.cpp  StdAfx.h  TUN_Edit.cpp  TUN_Edit.dsp  TUN_Edit.dsw  TUN_Edit.h  TUN_Edit.rc  TUN_EditDlg.cpp  TUN_EditDlg.h
Source/TUN-Source_V200/TUN_V2_Src/: TUN_Error.h  TUN_Scale.cpp  TUN_Scale.h  TUN_StringTools.cpp  Test.cpp  test  test_scale_out
Source/Tests/MIDIEnviromentTests/: MIDIEnviromentTest.cpp  MIDIEnviromentTest.h  MIDIEnviromentTestManager.cpp  MIDIEnviromentTestManager.h  NoteAndVelocityTest.cpp  NoteAndVelocityTest.h
docs/setup/Ableton/: Ableton-setup.md
(+3 files in other folders)
